--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,45 +3,45 @@ cmake_minimum_required(VERSION 3.2)
 set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
 set(PROJECT_VESRION 0.0.${PATCH_VERSION})
 
-project(filter VERSION ${PROJECT_VESRION})
+project(ip_filter VERSION ${PROJECT_VESRION})
 
 #option(WITH_BOOST_TEST "Whether to build Boost test" ON)
 option(WITH_GTEST "Whether to build google test" ON)
 
 configure_file(version.h.in version.h)
 
-add_executable(filter main.cpp)
-add_library(filter_lib filter.cpp filter.h)
+add_executable(ip_filter main.cpp)
+add_library(ip_filter_lib ip_filter.cpp ip_filter.h)
 
-set_target_properties(filter PROPERTIES
+set_target_properties(ip_filter PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
 
-target_include_directories(filter_lib
+target_include_directories(ip_filter_lib
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
-target_link_libraries(filter PRIVATE
-    filter_lib
+target_link_libraries(ip_filter PRIVATE
+    ip_filter_lib
 )
 
 if(WITH_GTEST)
     add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/googletest" "googletest")
-    add_executable(test_filter test_filter.cpp)
+    add_executable(test_ip_filter test_ip_filter.cpp)
 
-    target_include_directories(test_filter PRIVATE
+    target_include_directories(test_ip_filter PRIVATE
         ${GTEST_INCLUDE_DIRS}
         "${CMAKE_CURRENT_SOURCE_DIR}/src"
     )
 
-    set_target_properties(test_filter PROPERTIES
+    set_target_properties(test_ip_filter PROPERTIES
         CXX_STANDARD 14
         CXX_STANDARD_REQUIRED ON
     )
 
-    target_link_libraries(test_filter PRIVATE
-        filter_lib
+    target_link_libraries(test_ip_filter PRIVATE
+        ip_filter_lib
         ${GTEST_BOTH_LIBRARIES}
         gtest
         gtest_main
@@ -49,33 +49,33 @@ if(WITH_GTEST)
 endif()
 
 if(MSVC)
-    target_compile_options(filter PRIVATE
+    target_compile_options(ip_filter PRIVATE
         /W4
     )
-    target_compile_options(filter_lib PRIVATE
+    target_compile_options(ip_filter_lib PRIVATE
         /W4
     )
     if(WITH_GTEST)
-        target_compile_options(test_filter PRIVATE
+        target_compile_options(test_ip_filter PRIVATE
             /W4
         )
     endif()
 else ()
-    target_compile_options(filter PRIVATE
+    target_compile_options(ip_filter PRIVATE
         -Wall
         -Wextra -pedantic -Werror
     )
-    target_compile_options(filter_lib PRIVATE
+    target_compile_options(ip_filter_lib PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
     if(WITH_GTEST)
-        target_compile_options(test_filter PRIVATE
+        target_compile_options(test_ip_filter PRIVATE
             -Wall -Wextra -pedantic -Werror
         )
     endif()
 endif()
 
-install(TARGETS filter RUNTIME DESTINATION bin)
+install(TARGETS ip_filter RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
@@ -86,6 +86,6 @@ include(CPack)
 
 if(WITH_GTEST)
     enable_testing()
-    #add_test(test_filter test_filter)
-        add_test(test test_filter)
+    #add_test(test_ip_filter test_ip_filter)
+        add_test(test test_ip_filter)
 endif()
