--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST=ON
       - run: cmake --build .
       - run: cmake --build . --target test
+      - run: cat ip_filter.tsv | ip_filter | md5sum
       - run: cmake --build . --target package
       - name: Create Release
         id: create_release
