Place check md5sum inside cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,5 +98,10 @@ if(UNIX)
     include(CTest)
     #message(STATUS ">>> Linux or BSD or MacOS")
     enable_testing()
-    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5.sh")
-endif()
+    #add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5.sh")
+    add_test(NAME "check_md5sum" COMMAND "answer=$(cat ./ip_filter.tsv | ./ip_filter | md5sum) \
+                                          md5="24e7a7b2270daee89c64d3ca5fb3da1a" \
+                                          if [ "$answer" -ne "$md5" ] \
+                                              exit -1 \
+                                          exit 1")"
+    endif()
