Update check_md5sum command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,5 +98,5 @@ if(UNIX)
     include(CTest)
     #message(STATUS ">>> Linux or BSD or MacOS")
     enable_testing()
-    add_test(NAME "check_md5sum" COMMAND "bash ${PROJECT_SOURCE_DIR}/check_md5sum.sh")
+    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.sh")
 endif()
