--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           submodules: true
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST=ON
       - run: cmake --build .
+      - run: chmod +rx ./check_md5sum.sh
       - run: cmake --build . --target test
       - run: cat ./ip_filter.tsv | ./ip_filter | md5sum
       - run: cmake --build . --target package
