--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,15 +88,16 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_CONTACT divmy@yandex.ru)
 include(CPack)
 
-if(WITH_GTEST)
-    include(CTest)
-    enable_testing()
-    add_test(test test_ip_filter)
+include(CTest)
+enable_testing()
+if(UNIX)
+    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.sh")
+elseif(APPLE)
+    message(" >>> check sum test is not implemented for macos")
+elseif(WIN32)
+    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.cmd")
 endif()
 
-if(UNIX)
-    include(CTest)
-    #message(STATUS ">>> Linux or BSD or MacOS")
-    enable_testing()
-    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.sh")
+if(WITH_GTEST)
+    add_test(test test_ip_filter)
 endif()
