Update cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,11 +91,9 @@ include(CPack)
 include(CTest)
 enable_testing()
 if(UNIX)
-    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.sh")
-elseif(APPLE)
-    message(" >>> check sum test is not implemented for macos")
+    add_test(NAME "check_md5sum_nix" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.sh")
 elseif(WIN32)
-    add_test(NAME "check_md5sum" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.cmd")
+    add_test(NAME "check_md5sum_win" COMMAND "${PROJECT_SOURCE_DIR}/check_md5sum.cmd")
 endif()
 
 if(WITH_GTEST)
