--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: cmake . -B ./Release -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST=ON
+      - run: cmake -S . -B ./Release -DPATCH_VERSION=${{ github.run_number }} -DWITH_GTEST=ON
       - run: cmake --build ./Release
+      - run: cat ./ip_filter.tsv | ./Release/ip_filter | md5sum
       - run: chmod +rx ./check_md5sum.sh
       - run: cmake --build ./Release --target test
-      - run: cat ./ip_filter.tsv | ./ip_filter | md5sum
       - run: cmake --build ./Release --target package
       - name: Create Release
         id: create_release
